# haskell-pdk

./: .gitignore  CHANGELOG.md  HTTPGet.hs  Hello.hs  Makefile  README.md  cabal.project  extism-pdk.cabal
.github/workflows/: ci.yml  release.yml
examples/: CountVowels.hs  HTTPGet.hs  Hello.hs
src/: extism-pdk.c
src/Extism/: PDK.hs
src/Extism/PDK/: Bindings.hs  HTTP.hs  JSON.hs  Memory.hs  MsgPack.hs  Util.hs
test-host/: Cargo.toml
test-host/src/: main.rs
