cabal-version:      2.4
name:               extism-pdk
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             zach
maintainer:         zachshipko@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules: Extism.PDK Extism.PDK.Bindings

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0
    hs-source-dirs:   src
    default-language: Haskell2010
    -- ghc-options:
    --    -optl -Wl,--allow-undefined

executable hello
    main-is: Hello.hs    
    build-depends: base, extism-pdk
    default-language: Haskell2010
    ghc-options:
        -optl -Wl,--allow-undefined
