cabal-version:      3.0
name:               extism-pdk
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Extism Plugin Development Kit

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Extism Authors
maintainer:         oss@dylib.so

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules: Extism.PDK Extism.PDK.Bindings Extism.PDK.HTTP Extism.PDK.JSON

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, bytestring, extism:manifest, json
    hs-source-dirs:   src
    default-language: Haskell2010

executable hello
    scope: private
    main-is: examples/Hello.hs
    build-depends: base, extism-pdk
    default-language: Haskell2010
    ghc-options:
        -optl -Wl,--allow-undefined

executable http_get
    scope: private
    main-is: examples/HTTPGet.hs
    build-depends: base, extism-pdk
    default-language: Haskell2010
    ghc-options:
        -optl -Wl,--allow-undefined

executable count_vowels
    scope: private
    main-is: examples/CountVowels.hs
    build-depends: base, extism-pdk
    default-language: Haskell2010
    ghc-options:
        -optl -Wl,--allow-undefined
